--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring.h2.console.enabled: true
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format_sql: true
 
+spring.resources.static-locations: "file:src/main/resources"
+
+
